# rust-react-chat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
migrations/2022-11-21-101206_create_users/: up.sql
migrations/2022-11-21-101215_create_rooms/: up.sql
migrations/2022-11-21-101223_create_conversations/: up.sql
migrations/2023-02-19-001806_create_room_has_users/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs  session.rs
ui/: package-lock.json  package.json
ui/components/: login.js  login.tsx  message.tsx  rooms.js  rooms.tsx
ui/libs/: useConversation.js  useMessage.ts  useWebsocket.js  useWebsocket.ts
ui/pages/: index.js  index.tsx
ui/services/: api.ts  messages.ts  room_has_user.ts  rooms.ts  users.ts
ui/stores/: rooms.ts  store.ts
ui/types/: types.ts
