[package]
edition = "2021"
name = "rust-react-chat"
version = "0.1.0"

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
chrono = {version = "0.4.23", features = ["serde"]}
diesel = {version = "2", features = ["postgres", "r2d2", "chrono"]}
dotenvy = "0.15.6"
rand = "0.8.5"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.88"
uuid = {version = "1", features = ["v4", "serde"]}
